[package]
name = "can_adapter"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "logger"
path = "src/main.rs"

[lib]
name = "can_adapter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
libloading = "0.8.6"
rust-ini = "0.21.1"
clap = { version = "4.5.23", features = ["derive"] }
color-print = { version = "0.3.7" }
