[package]
name = "can_adapter"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Library to load CAN adapters typically used to diagnose vehicles."
homepage = "https://github.com/SolidDesignNet/rp1210-rs"
repository = "https://github.com/SolidDesignNet/rp1210-rs"
readme = "README.md"
keywords = ["rp1210", "rp1210a", "j2534", "CAN", "j1939"]

[[bin]]
name = "logger"
path = "src/main.rs"

[lib]
name = "can_adapter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
libloading = "0.8.6"
rust-ini = "0.21.1"
clap = { version = "4.5.23", features = ["derive"] }
color-print = { version = "0.3.7" }
dbg_hex={version="0.2.0"}

[target.'cfg(linux)'.build-dependencies]
socketcan = { version = "3.5.0", features = ["enumerate"] }
