[package]
name = "can_adapter"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "Library to load CAN adapters typically used to diagnose vehicles."
homepage = "https://github.com/SolidDesignNet/rp1210-rs"
repository = "https://github.com/SolidDesignNet/rp1210-rs"
readme = "README.md"
keywords = ["rp1210", "slcan", "j2534", "CAN", "j1939"]

[[bin]]
name = "logger"
path = "src/main.rs"

[lib]
name = "can_adapter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
libloading = "0.9.0"
rust-ini = "0.21.3"
clap = { version = "4.5.52", features = ["derive"] }
clap-num = "1.2.0"
color-print = { version = "0.3.7" }
dbg_hex = { version = "0.2.0" }
serialport = "4.8.1"
zerocopy = { version = "0.8.27", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5.0", features = ["enumerate"] }
